# whereami-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  gh_rsa.enc  search-index.js  whereami-rs.sublime-project
examples/: simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
src/: implementation.rs  lib.rs  native.rs
src/whereami/src/: implementation.rs.html  lib.rs.html  native.rs.html
whereami/: executable_path.v.html  fn.executable_path.html  fn.module_path.html  index.html  module_path.v.html  sidebar-items.js
