[package]
name = "whereami"
description = "whereami for Rust"
documentation = "https://cdn.rawgit.com/nabijaczleweli/whereami-rs/doc/whereami/index.html"
repository = "https://github.com/nabijaczleweli/whereami-rs"
readme = "README.md"
keywords = ["whereami", "where", "location", "filesystem"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]
links = "whereami"
build = "build.rs"


[build-dependencies]
gcc = "0.3"
